[tool.poetry]
name = "finalproject-veber-m25-555"
version = "0.1.0"
description = "ValutaTrade Hub - управление валютными портфелями"
authors = ["Iuliia Veber <pestonova.yulya@yandex.ru>"]
readme = "README.md"

# Указываем, что основной пакет находится в корне
packages = [
    { include = "valutatrade_hub", from = "." }
]

# Или можно отключить package mode если возникают проблемы
# package-mode = false

[tool.poetry.scripts]
project = "valutatrade_hub.cli.interface:main"

[tool.poetry.dependencies]
python = "^3.11"  # Рекомендую использовать 3.11 вместо 3.13 для совместимости

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"