[tool.poetry]
name = "finalproject-veber-m25-555"
version = "0.1.0"
description = "ValutaTrade Hub - управление валютными портфелями"
authors = ["Iuliia Veber <pestonova.yulya@yandex.ru>"]
readme = "README.md"

packages = [
    {include = "valutatrade_hub", from = "."},
]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
requests = "^2.32.5"

[tool.poetry.scripts]
valutatrade = "valutatrade_hub.cli.interface:main"
project = "valutatrade_hub.cli.interface:main"

[tool.black]
line-length = 88
target-version = ['py39']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.valutatrade.api_keys]
exchangerate = "a748faeb2d9bb48fc113bd89"
coingecko = "your_coingecko_key_here"