[tool.poetry]
name = "finalproject-veber-m25-555"
version = "0.1.0"
description = "ValutaTrade Hub - управление валютными портфелями"
authors = ["Iuliia Veber <pestonova.yulya@yandex.ru>"]
readme = "README.md"

packages = [
    {include = "valutatrade_hub", from = "."},
]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
requests = "^2.32.5"

[tool.valutatrade]
USERS_FILE = "data/users.json"
PORTFOLIOS_FILE = "data/portfolios.json"
RATES_FILE = "data/rates.json"

RATES_TTL_SECONDS = 300
DEFAULT_BASE_CURRENCY = "USD"

LOG_LEVEL = "INFO"
LOG_FORMAT = "%(asctime)s | %(levelname)s | %(message)s"
LOG_PATH = "logs/app.log"